# SoundTest

./: CMakeLists.txt  gui.cpp  gui.h  nodes.cpp  nodes.h  nodes_draw.cpp  nodes_rotary_encoder.cpp  nodes_rotary_encoder.h  synth.cpp
